--- a/css/style_index.css
+++ b/css/style_index.css
@@ -330,6 +330,20 @@ img{
   cursor: pointer;
 }
 
+@media screen and (max-width: 640px) {
+    #top-banner,
+    #bottom-banner {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+    }
+    
+    .banner {
+        max-width: 100%;
+        aspect-ratio: 1 / 1;
+    }
+}
+
 /* Image */
 .banner img {
   width: 100%;
@@ -397,4 +411,23 @@ img{
 .banner-overlay button:hover {
   background: #000;
   color: #fff;
+}
+
+.banner-img {
+  position: relative;
+  width: 100%;
+  max-width: 500px;
+  aspect-ratio: 5 / 4;
+  overflow: hidden;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  justify-self: center;
+  margin: 50px 0;
+  z-index: -10;
+}
+
+.banner-img img {
+    width: 100%;
+    height: 100%;
 }
